--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         .navbar .logo {
             font-size: 1.5em;
             font-weight: bold;
+            color: white;
         }
 
         .navbar .nav-links {
@@ -59,19 +60,167 @@
                 margin: 0;
             }
         }
+
+        .content {
+            display: flex;
+            align-items: flex-start;
+            padding: 20px;
+        }
+
+        .profpic {
+            max-width: 200px;
+            height: auto;
+            margin-right: 20px;
+        }
+
+        .heading {
+            max-width: 600px;
+        }
+
+        .cards {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin: 20px;
+        }
+
+        .card {
+            background-color: #f4f4f4;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            width: 100%;
+            padding: 15px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .card-title {
+            font-size: 1.2em;
+            margin-bottom: 10px;
+            font-weight: bold;
+            color: #333;
+        }
+
+        .card-content {
+            font-size: 0.9em;
+            color: #555;
+            line-height: 1.5;
+        }
+
+        .skills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin: 20px;
+        }
+
+        .skill {
+            background-color: #0073e6;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 20px;
+            font-size: 0.9em;
+        }
+
+        .footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 20px;
+        }
+
+        .footer a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+            font-size: 1.2em;
+            transition: color 0.3s ease;
+        }
+
+        .footer a:hover {
+            color: #0073e6;
+        }
+
+        .footer img {
+            width: 30px;
+            height: 30px;
+            margin: 0 10px;
+            vertical-align: middle;
+            transition: transform 0.3s ease;
+        }
+
+        .footer img:hover {
+            transform: scale(1.1);
+        }
     </style>
 </head>
 <body>
 
     <header class="navbar">
-        <div class="logo">MyWebsite</div>
+        <div class="logo">Saimadhav S</div>
         <nav class="nav-links">
-            <a href="#">Home</a>
             <a href="#">About</a>
-            <a href="#">Services</a>
+            <a href="#">Projects</a>
+            <a href="#">Skills</a>
             <a href="#">Contact</a>
         </nav>
     </header>
+
+    <div class="content">
+        <img src="../Pictures/Saimadhav.jpg" alt="Profile Picture" class="profpic">
+        <div>
+            <h2> About</h2>
+            <p class="heading" style="text-align:justify;">
+            Saimadhav is a masters student in the Industrial Engineering and Operations Research program at IIT Bombay. He previously obtained his bachelor's in Computer Science Engineering
+            from Madras Institute of Technology, Chennai. He is interested in Digital Twin Simulation, Supply Chain, and Artificial Intelligence applications to supply chains. 
+            He is working on developing a Digital Twin for a warehouse.
+            </p>
+        </div>
+    </div>
+    <h2 style="margin-left: 20px;">Projects</h2>
+    <div class="cards">
+        <div class="card">
+            <div class="card-title">XAI-Cardiocare : eXplainable AI driven heart valve disease detection</div>
+            <div class="card-content">A web based deep learning system that classifies heart sound signals as NORMAL or MVP or MR or MS or AS (Disease classes). My contribution to the project was in training a 2-D CNN model and adding explainability to the system. Libraries used : Tensorflow, Keras, SciPy, NumPy, Flask.
+                                      Libraries used : Tensorflow, Keras, SciPy, NumPy, Flask.
+
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-title">Natal.ml : Perinatal health risk prediction using machine learning</div>
+            <div class="card-content">This project involved developing an ML-based web app to predict perinatal health risk based on various vitals of the patient. My contribution to the project involved data cleaning, exploratory data analysis and selection of most suited machine learning model.</div>
+        </div>
+        <div class="card">
+            <div class="card-title">Gymkhana - Social network of fitness enthusiasts</div>
+            <div class="card-content">Problem Statement : Absence of community or friends to work out along for various fitness activities reduces our efficiency both physically and mentally. There are very few readily available means for finding people exclusively for such situations. My work in the project was backend development.</div>
+        </div>
+    </div>
+    <h2 style="margin-left: 20px;">Skills</h2>
+    <div class="skills">
+        <div class="skill">Python</div>
+        <div class="skill">Machine Learning</div>
+        <div class="skill">Data Analysis</div>
+        <div class="skill">Digital Twin Simulation</div>
+        <div class="skill">Supply Chain Optimization</div>
+        <div class="skill">Flask</div>
+        <div class="skill">TensorFlow</div>
+    </div>
+
+    <footer class="footer">
+        <p>&copy; 2024 Saimadhav S</p>
+        <div>
+            <a href="https://github.com/passeng02" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/saimadhav-s-a0967618b/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn"></a>
+            <a href="mailto:24m1532@iitb.ac.in"><img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Gmail"></a>
+            <a href="https://scholar.google.com/"><img src="https://static.cdnlogo.com/logos/g/95/google-scholar.svg"></a>
+        </div>
+    </footer>
 
 </body>
 </html>
